--- a/Trax/Base.lproj/Main.storyboard
+++ b/Trax/Base.lproj/Main.storyboard
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="GPXViewController" customModule="Trax" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +16,26 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Qs2-L4-AuM"/>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Qs2-L4-AuM" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Hei-CA-Acz"/>
+                            <constraint firstAttribute="trailing" secondItem="Qs2-L4-AuM" secondAttribute="trailing" id="LJp-x8-Tdq"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Qs2-L4-AuM" secondAttribute="bottom" id="Mqv-Fx-3Rq"/>
+                            <constraint firstItem="Qs2-L4-AuM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="UGa-Ea-xjN"/>
+                            <constraint firstItem="Qs2-L4-AuM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ktq-BF-XLt"/>
+                            <constraint firstItem="Qs2-L4-AuM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="lTW-Og-Koa"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="Qs2-L4-AuM" id="q3t-RA-hyl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="237.59999999999999" y="24.7376311844078"/>
         </scene>
     </scenes>
 </document>
